--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "author": "sleepyboy",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.15.2",
     "socket.io": "^2.3.0"
   },
